--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -348,6 +348,7 @@
   "api.common.WRONG_PHONE_FORMAT": "Wrong phone number format",
   "api.contact.contact.CONTACT_DUPLICATE_ERROR": "Contact with this phone number is already registered in this room",
   "api.document.WRONG_PROPERTY_ORGANIZATION": "Property has different organization",
+  "api.global.rateLimit.RATE_LIMIT_EXCEEDED": "You've made too many requests recently, try again later",
   "api.marketplace.invoice.ALREADY_CANCELED": "Changing of canceled invoice is forbidden",
   "api.marketplace.invoice.ALREADY_PAID": "Changing of paid invoice is forbidden",
   "api.marketplace.invoice.CLIENT_DATA_DOES_NOT_MATCH_TICKET": "Address and contact data must match the data from the ticket to which the invoice is linked",
