--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -647,6 +647,7 @@
   "contact.ConfirmDeleteMessage": "This contact will be deleted forever",
   "contact.ConfirmDeleteTitle": "Delete contact?",
   "contact.Contact.ContactsEditor.AddNewContact": "New contact",
+  "contact.Contact.ContactsEditor.NotResident": "Not a resident",
   "contact.Contact.ContactsEditor.AnotherContact": "Another contact",
   "contact.Contact.ContactsEditor.Name": "Name",
   "contact.Contact.ContactsEditor.Name.placeholder": "Full name",
@@ -2059,6 +2060,7 @@
   "pages.condo.meter.create.AddMeterTourStepTitle": "Meters for this unit have not yet been added",
   "pages.condo.meter.create.LastReading": "Last meter reading",
   "pages.condo.meter.create.MeterReadings": "Meter readings",
+  "pages.condo.meter.create.Date": "Date of deposition",
   "pages.condo.meter.create.MetersAndReadings": "Meters and meter readings",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Enter the reading you want to send",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "This resource is owned by another organization. Please, contact tech support",
