--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1109,11 +1109,10 @@
   "import.callbackModal.phoneLabel": "Номер телефона",
   "import.callbackModal.submitButtonLabel": "Номер верный — звоните",
   "import.callbackModal.title": "Проверьте номер телефона",
-  "import.contact.genitive": "Контактов жителей",
-  "import.contact.isVerifiedCheckbox.title": "Верифицировать контакты",
-  "import.contact.isVerifiedCheckbox.tooltip.title": "Верифицированные контакты могут пользоваться сервисами в мобильном приложении",
+  "import.contact.genitive": "жителей",
+  "import.contact.isVerifiedCheckbox.title": "Автоматически верифицировать жителей",
+  "import.contact.isVerifiedCheckbox.tooltip.title": "Верифицированные контакты могут пользоваться сервисами в мобильном приложении. Например, могут оставить заявку на пропуск.",
   "import.contact.plural": "Контакты жителей",
-  "import.contact.prepositional": "Контактах жителей",
   "import.contact.requiredFields": "Укажите адрес, номер помещения, тип помещения, телефон и ФИО",
   "import.errorModal.title": "{plural} не получилось загрузить",
   "import.fileImportHelpModal.alert.description": "Менеджер будет добавлять информацию вручную. Мы позвоним и сообщим, когда все будет готово.",
@@ -1131,9 +1130,8 @@
   "import.helpModal.readInstruction.title": "Изучить инструкцию",
   "import.helpModal.title": "Мы обязательно поможем",
   "import.meter.genitive": "Показаний ИПУ",
-  "import.meter.plural": "Приборы",
-  "import.meter.prepositional": "Показаниях ИПУ",
-  "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, количество тарифов и дату передачи показаний",
+  "import.meter.plural": "Приборы и показания",
+  "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, номер счетчика, количество тарифов и дату передачи показаний",
   "import.meterReading.plural": "Показания",
   "import.partlyDataLoadedModal.alert.description": "Незагруженные данные можно попробовать добавить вручную или сформировать из них таблицу и попробовать загрузить снова",
   "import.partlyDataLoadedModal.alert.message": "Получилось добавить {success} из {total} {genitive}",
@@ -1143,19 +1141,17 @@
   "import.progressModal.title": "Загрузка данных",
   "import.property.genitive": "Домов",
   "import.property.plural": "Дома",
-  "import.property.prepositional": "Домах",
   "import.property.requiredFields": "Укажите адрес и количество помещений, подъездов и этажей",
   "import.successModal.buttonLabel": "Продолжить",
   "import.successModal.title": "Все получилось — данные загружены",
   "import.ticket.genitive": "Заявок",
   "import.ticket.plural": "Заявки",
-  "import.ticket.prepositional": "Заявках",
   "import.ticket.requiredFields": "Укажите адрес и опишите проблему",
   "import.uploadButtonLabel": "Импорт списка из файла",
   "import.uploadModal.chooseAnotherFileForUpload": "Выбрать другой файл для загрузки",
   "import.uploadModal.chooseFileForUpload": "Выбрать файл для загрузки",
   "import.uploadModal.exampleLinkMessage": "Шаблон списка {genitive}.xlsx",
-  "import.uploadModal.message": "Загрузите свой файл с информацией о {prepositional} или воспользуйтесь шаблоном",
+  "import.uploadModal.message": "Для этого скачайте шаблон, внесите информацию в файл и загрузите его на платформу",
   "import.uploadModal.needHelp": "Нужна помощь",
   "import.uploadModal.requiredFields.title": "Заполните обязательные поля",
   "import.uploadModal.title": "Добавьте {plural} на платформу",
