--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1421,11 +1421,11 @@
   "news.template.category.electricity": "\uD83D\uDCA1 Electricidad",
   "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricidad y ascensores",
   "news.template.category.elevators": "\uD83D\uDED7 Ascensor",
-  "news.template.category.gas": "\uD83E\uDDBA Gas",
-  "news.template.category.heating": "Calefacción",
+  "news.template.category.gas": "♨\uFE0F  Gas",
+  "news.template.category.heating": "\uD83C\uDF21\uFE0F Calefacción",
   "news.template.category.intercom": "\uD83D\uDD22 Interfono",
-  "news.template.category.meters": "❗ Contadores",
-  "news.template.category.other": "Otros",
+  "news.template.category.meters": "⏱\uFE0F Contadores",
+  "news.template.category.other": "\uD83C\uDFE0 Otros",
   "news.template.category.snow": "❄\uFE0F Nieve",
   "news.template.category.telephone": "\uD83D\uDCDE Teléfono",
   "news.template.category.utilities": "\uD83D\uDCA1 Todos servicios",
