--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1421,11 +1421,11 @@
   "news.template.category.electricity": "\uD83D\uDCA1 Электроэнергия",
   "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Электроэнергия и лифты",
   "news.template.category.elevators": "\uD83D\uDED7 Лифты",
-  "news.template.category.gas": "\uD83E\uDDBA Газ",
-  "news.template.category.heating": "Отопление",
+  "news.template.category.gas": "♨\uFE0F  Газ",
+  "news.template.category.heating": "\uD83C\uDF21\uFE0F Отопление",
   "news.template.category.intercom": "\uD83D\uDD22 Домофон",
-  "news.template.category.meters": "❗ Счетчики",
-  "news.template.category.other": "Другое",
+  "news.template.category.meters": "⏱\uFE0F Счетчики",
+  "news.template.category.other": "\uD83C\uDFE0 Другое",
   "news.template.category.snow": "❄\uFE0F Снег",
   "news.template.category.telephone": "\uD83D\uDCDE Телефон",
   "news.template.category.utilities": "\uD83D\uDCA1 Все коммунальные услуги",
