--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -463,6 +463,7 @@
   "api.ticket.ticketDocumentGenerationTask.STATUS_IS_ALREADY_ERROR": "Задача уже завершилась с ошибкой",
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "Не найдена заявка с id \"{ticketId}\" для текущего пользователя",
   "api.user.CAPTCHA_CHECK_FAILED": "Не удалось завершить операцию. Пожалуйста, обновите приложение",
+  "api.user.CREDENTIAL_VALIDATION_FAILED": "Не удалось авторизовать пользователя",
   "api.user.DAILY_REQUEST_LIMIT_FOR_EMAIL_REACHED": "С использованием вашей почты поступает очень много запросов, попробуйте позже",
   "api.user.DAILY_REQUEST_LIMIT_FOR_IP_REACHED": "С вашего IP-адреса поступает очень много запросов, попробуйте позже",
   "api.user.DAILY_REQUEST_LIMIT_FOR_PHONE_REACHED": "С использованием вашего номера телефона поступает очень много запросов, попробуйте позже",
