--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -479,6 +479,14 @@
   "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "You are sending too many requests. Try again later",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Unable to verify your phone number. Try again or ask our support",
   "api.user.WRONG_PASSWORD_FORMAT": "Password must be in string format",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "You cannot specify different emails",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "You cannot specify different phones",
+  "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Invalid token",
+  "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Please fill in the required fields",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "To be able to log in with your phone number, you must log in to your account using a verified email",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "To be able to log in with your email, you must log in to your account using a verified phone number",
+  "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Invalid token",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Operation failed",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Wrong phone or password",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Unable to find non-expired ConfirmPhoneAction by specified token",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Unable to find user with specified phone",
