--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -479,6 +479,14 @@
   "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "Estás enviando demasiadas solicitudes. Inténtalo de nuevo más tarde",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "No se ha podido confirmar el número de teléfono. Inténtelo de nuevo o póngase en contacto con el servicio de asistencia técnica",
   "api.user.WRONG_PASSWORD_FORMAT": "La contraseña debe ser una cadena",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "No puedes especificar correos electrónicos diferentes",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "No puede especificar diferentes teléfonos",
+  "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Token no válido",
+  "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Por favor, complete los campos obligatorios",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "Para poder iniciar sesión con su número de teléfono, debe iniciar sesión en su cuenta utilizando un correo electrónico verificado.",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "Para poder iniciar sesión con tu correo electrónico, debes iniciar sesión en tu cuenta utilizando un número de teléfono verificado",
+  "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Token no válido",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "No se pudo completar la operación",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Teléfono o contraseña incorrectos",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "No se ha encontrado un token de cambio de contraseña válido",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "No se ha podido encontrar un usuario con el número de teléfono especificado",
