--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -479,6 +479,14 @@
   "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "От вас поступает очень много запросов, попробуйте позже",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Не удалось подтвердить номер телефона. Попробуйте ещё раз или обратитесь в тех-поддержку",
   "api.user.WRONG_PASSWORD_FORMAT": "Пароль должен быть строкой",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "Вы не можете указать разные электронные почты",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "Вы не можете указать разные номера телефонов",
+  "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Недействительный токен",
+  "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Пожалуйста, заполните обязательные поля",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "Чтобы иметь возможность войти по номеру телефона, вам необходимо войти в свою учетную запись, используя подтвержденный адрес электронной почты",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "Чтобы иметь возможность войти по почте, вам необходимо войти в свою учетную запись, используя подтвержденный номер телефона",
+  "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Недействительный токен",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Не удалось выполнить операцию",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Неверный телефон или пароль",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Не найден действительный токен на изменение пароля",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Не удалось найти пользователя с указанным телефоном",
