--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1769,6 +1769,9 @@
   "pages.condo.error.NotFoundDescription": "Page removed or never existed",
   "pages.condo.error.NotFoundTitle": "Page not found",
   "pages.condo.error.PageTitle": "Improving service",
+  "pages.condo.error.TooManyRequestsTitle": "Access will be restored soon",
+  "pages.condo.error.TooManyRequestsDescription": "There are too many requests from your IP address, so we have restricted access. It will automatically be restored in {resetTime}. Please wait.",
+  "pages.condo.error.TooManyRequestsErrorCode": "If access is not restored, contact technical support and report the error code - 429.",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Can't detect payment link type. Maybe link was corrupted or copied partially.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Unknown payment link",
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
